--- a/upload/index.html
+++ b/upload/index.html
@@ -262,7 +262,7 @@
     <br>
     <br>
     <br>
-    <div id="Note"><b>Note: Upload the screenshot with the statistics in horizontal orientation or in an orientation such that none of the text has any rotation</b></div>
+    <div id="Note"><b>Note: Texts on screenshot should have no rotation. Otherwise my image recogniser fails. <a href="examples/"><i>Example screenshots</i></a></b></div>
     <img id="image-preview" style="display:none;"/>
     <br>
     <div id="Note2" style="display:none; margin-top: 1em"><i>The screenshots and analysed data will be manually assessed before being published. Any incorrect grade translations will be fixed in the manual process (E.g. missing 5.0X).</i></div>
