--- a/upload/index.html
+++ b/upload/index.html
@@ -302,7 +302,7 @@
         <input type="file" id="file-input" class="upload-input">
     </div>
     <div class="upload-or">OR</div>
-    <input type="text" class="search-bar" placeholder="Paste image link">
+    <input type="text" class="search-bar" placeholder="Paste image from clipboard or link">
     <button class="upload-button" id="upload-button">Generate Statistics</button>
     <div id="loading-animation"><br><br><br>Generating statistics...<br><i>takes 5-10 seconds</i></div>
     <br>
