Fix redirect link

--- a/upload/index.html
+++ b/upload/index.html
@@ -235,7 +235,7 @@
                         }),
                         success: function (data) {
                             if (allData['Date'] == data['hits'][0]['Date']) {
-                                var duplicateUrl = "https://stats-api.aamin.dev/?query=" + data['hits'][0]['Module Number'] + "%20" + data['hits'][0]['Date'];
+                                var duplicateUrl = "https://stats.aamin.dev/?query=" + data['hits'][0]['Module Number'] + "%20" + data['hits'][0]['Date'];
                                 $('#duplicate-warning').show();
                                 $('#send-button').val('Send Anyway').show();
                                 $('#duplicate-message').html(`Looks like this stat already exists in my database. Please check <a href="${duplicateUrl}" target="_blank">this link</a> to confirm. If you believe this is a mistake, you can submit these stats regardless.`).show();
