--- a/upload/index.html
+++ b/upload/index.html
@@ -4,27 +4,75 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Upload Statistics</title>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600&display=swap" rel="stylesheet">
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
     <style>
+        *, *::before, *::after {
+            box-sizing: border-box;
+        }
+
         body {
-            background: #ffffff; /* White background */
-            color: #000000; /* Black color for text */
-            font-family: Arial, sans-serif;
+            font-family: 'Inter', -apple-system, BlinkMacSystemFont, 'Segoe UI', sans-serif;
+            margin: 0;
+            padding: 24px 16px;
+            background-color: #f8f9fa;
+            color: #1a1a1a;
+            -webkit-font-smoothing: antialiased;
         }
+
         .container {
-            width: 70%;
-            margin: 50px auto;
+            max-width: 680px;
+            margin: 0 auto;
+        }
+
+        h1 {
+            font-size: 22px;
+            font-weight: 600;
+            color: #111;
+            margin: 0 0 24px 0;
             text-align: center;
+            letter-spacing: -0.3px;
         }
+
         .upload-area {
-            border: 2px dashed #000000; /* Black dashed border */
-            padding: 30px;
-            margin-top: 20px;
+            border: 2px dashed #d1d5db;
+            border-radius: 12px;
+            padding: 48px 24px;
+            text-align: center;
             position: relative;
+            transition: border-color 0.2s, background-color 0.2s;
+            cursor: pointer;
         }
-        .upload-area:hover {
-            background: #e0e0e0; /* Lighter gray for hover */
+
+        .upload-area:hover, .upload-area.dragover {
+            border-color: #2563eb;
+            background-color: #eff6ff;
         }
+
+        .upload-icon {
+            font-size: 36px;
+            margin-bottom: 12px;
+            display: block;
+            color: #9ca3af;
+        }
+
+        .upload-instructions {
+            font-size: 15px;
+            color: #6b7280;
+        }
+
+        .upload-instructions label {
+            color: #2563eb;
+            font-weight: 500;
+            cursor: pointer;
+        }
+
+        .upload-instructions label:hover {
+            text-decoration: underline;
+        }
+
         .upload-input {
             position: absolute;
             width: 100%;
@@ -34,90 +82,242 @@
             opacity: 0;
             cursor: pointer;
         }
-        .upload-or {
+
+        .divider {
+            display: flex;
+            align-items: center;
             margin: 20px 0;
-            color: #808080; /* Dark gray color */
+            color: #9ca3af;
+            font-size: 13px;
         }
+
+        .divider::before, .divider::after {
+            content: '';
+            flex: 1;
+            height: 1px;
+            background: #e5e7eb;
+        }
+
+        .divider span {
+            padding: 0 12px;
+        }
+
         .search-bar {
-            padding: 10px;
-            width: calc(100% - 22px);
-            background: #f0f0f0; /* Very light gray for input fields */
-            border: 1px solid #ccc; /* Added border for better visibility */
-            color: black; /* Black text inside input fields */
-            margin-bottom: 10px;
-        }
-        .upload-button, .send-button {
-            padding: 10px 20px;
-            background: #4285f4; /* Blue background */
-            border: none;
-            color: white; /* White text */
-            cursor: pointer;
             width: 100%;
-        }
-        .upload-button:hover, .send-button:hover {
-            background: #3079ed; /* Slightly darker blue on hover */
-        }
-        .contact {
-            padding: 10px 20px;
-            background-color: #4285F4;
-            color: white;
-            text-decoration: none;
+            padding: 12px 16px;
+            font-size: 14px;
+            font-family: inherit;
+            border: 1px solid #d1d5db;
             border-radius: 10px;
-            box-shadow: 0 2px 4px rgba(0,0,0,0.2);
-            display: inline-block;
+            background: white;
+            color: #1a1a1a;
+            outline: none;
+            transition: border-color 0.2s, box-shadow 0.2s;
+            margin-bottom: 16px;
         }
-        #image-preview {
-            max-width: 50%;
+
+        .search-bar:focus {
+            border-color: #2563eb;
+            box-shadow: 0 0 0 3px rgba(37, 99, 235, 0.1);
+        }
+
+        .search-bar::placeholder {
+            color: #9ca3af;
+        }
+
+        .upload-button, .send-button {
+            width: 100%;
+            padding: 12px 20px;
+            background-color: #2563eb;
+            color: white;
+            border: none;
+            border-radius: 10px;
+            cursor: pointer;
+            font-family: inherit;
+            font-size: 15px;
+            font-weight: 500;
+            transition: background-color 0.2s;
+        }
+
+        .upload-button:hover, .send-button:hover {
+            background-color: #1d4ed8;
+        }
+
+        .note {
             margin-top: 20px;
+            padding: 12px 14px;
+            background-color: #fffbeb;
+            border-left: 3px solid #f59e0b;
+            border-radius: 8px;
+            font-size: 13px;
+            color: #92400e;
+            line-height: 1.5;
         }
-        #html-output, #json-output, .missing-fields, #send-data-box {
+
+        .note a {
+            color: #2563eb;
+            font-weight: 500;
+        }
+
+        .info-note {
+            margin-top: 16px;
+            padding: 12px 14px;
+            background-color: #eff6ff;
+            border-left: 3px solid #2563eb;
+            border-radius: 8px;
+            font-size: 13px;
+            color: #1e40af;
+            line-height: 1.5;
+        }
+
+        #image-preview {
+            max-width: 100%;
+            margin-top: 20px;
+            border-radius: 8px;
+            border: 1px solid #e5e7eb;
+        }
+
+        #html-output, .missing-fields, #send-data-box {
             text-align: left;
             white-space: pre-wrap;
             word-wrap: break-word;
-            background: #f8f8f8; /* Light gray background */
+            background: white;
             padding: 20px;
             margin-top: 20px;
-            border: 1px solid #ddd; /* Added subtle border */
+            border: 1px solid #e5e7eb;
+            border-radius: 12px;
         }
-        #loading-animation {
+
+        #json-output {
             display: none;
-            color: #4285f4;
         }
+
+        .loading {
+            display: none;
+            text-align: center;
+            padding: 40px 0;
+            color: #6b7280;
+            font-size: 14px;
+        }
+
+        .spinner {
+            width: 28px;
+            height: 28px;
+            border: 3px solid #e5e7eb;
+            border-top-color: #2563eb;
+            border-radius: 50%;
+            animation: spin 0.7s linear infinite;
+            margin: 0 auto 12px;
+        }
+
+        @keyframes spin {
+            to { transform: rotate(360deg); }
+        }
+
         .field-input, .email-input {
-            padding: 10px;
-            width: calc(100% - 22px);
-            background: #f0f0f0; /* Very light gray for input fields */
-            border: 1px solid #ccc; /* Added border for better visibility */
-            color: black; /* Black text inside input fields */
-            margin: 5px 0;
+            width: 100%;
+            padding: 10px 14px;
+            font-size: 14px;
+            font-family: inherit;
+            border: 1px solid #d1d5db;
+            border-radius: 8px;
+            background: white;
+            color: #1a1a1a;
+            outline: none;
+            margin: 4px 0 12px 0;
+            transition: border-color 0.2s, box-shadow 0.2s;
         }
-        /* Custom styles for send button states */
+
+        .field-input:focus, .email-input:focus {
+            border-color: #2563eb;
+            box-shadow: 0 0 0 3px rgba(37, 99, 235, 0.1);
+        }
+
+        .field-label {
+            font-size: 13px;
+            font-weight: 500;
+            color: #374151;
+        }
+
         .send-button-processing {
-            background-color: #FFC107; /* Amber background */
-            animation: pulse 2s infinite; /* Animation effect */
+            background-color: #f59e0b;
+            animation: pulse 2s infinite;
         }
+
+        .send-button-processing:hover {
+            background-color: #d97706;
+        }
+
         .send-button-success {
-            background-color: #4CAF50; /* Green background */
+            background-color: #16a34a;
             cursor: default;
         }
+
+        .send-button-success:hover {
+            background-color: #16a34a;
+        }
+
         .send-button-error {
-            background-color: #F44336; /* Red background */
+            background-color: #dc2626;
         }
-        /* Simple animation */
+
+        .send-button-error:hover {
+            background-color: #b91c1c;
+        }
+
         @keyframes pulse {
-            0% {
-                opacity: 1;
-            }
-            50% {
-                opacity: 0.5;
-            }
-            100% {
-                opacity: 1;
-            }
+            0%, 100% { opacity: 1; }
+            50% { opacity: 0.7; }
         }
+
         .error-message {
-            color: #F44336; /* Red color for error messages */
-            margin-top: 10px;
+            color: #dc2626;
+            font-size: 13px;
+            margin-top: 8px;
+        }
+
+        .duplicate-warning {
+            display: none;
+            margin-top: 12px;
+            padding: 12px 14px;
+            background-color: #fef2f2;
+            border-left: 3px solid #ef4444;
+            border-radius: 8px;
+            font-size: 13px;
+            color: #991b1b;
+            line-height: 1.5;
+        }
+
+        .duplicate-warning a {
+            color: #2563eb;
+            font-weight: 500;
+        }
+
+        .contact {
+            padding: 10px 18px;
+            background-color: #2563eb;
+            color: white;
+            text-decoration: none;
+            border-radius: 10px;
+            font-family: inherit;
+            font-size: 13px;
+            font-weight: 500;
+            display: inline-block;
+            transition: background-color 0.2s;
+        }
+
+        .contact:hover {
+            background-color: #1d4ed8;
+        }
+
+        @media (max-width: 600px) {
+            body {
+                padding: 16px 12px;
+            }
+
+            .upload-area {
+                padding: 32px 16px;
+            }
         }
     </style>
     <script>
@@ -129,6 +329,12 @@
         $(document).ready(function(){
             var base64ImageData = '';
 
+            // Drag and drop visual feedback
+            const uploadArea = document.querySelector('.upload-area');
+            uploadArea.addEventListener('dragover', () => uploadArea.classList.add('dragover'));
+            uploadArea.addEventListener('dragleave', () => uploadArea.classList.remove('dragover'));
+            uploadArea.addEventListener('drop', () => uploadArea.classList.remove('dragover'));
+
             function displayImage(imageData) {
                 resetUI();
                 $('#image-preview').attr('src', imageData).show();
@@ -136,7 +342,8 @@
                 $('#html-output').empty().hide();
                 $('#missing-fields').empty().hide();
                 $('#send-button').hide();
-                $('#duplicate-message').empty().hide();
+                $('#duplicate-message').empty();
+                $('#duplicate-warning').hide();
                 $('#Note2').hide();
             }
 
@@ -145,9 +352,10 @@
                 $('#html-output').hide();
                 $('#json-output').hide();
                 $('#loading-animation').show();
-                $('#missing-fields').empty().hide(); // Reset missing fields
+                $('#missing-fields').empty().hide();
                 $('#send-button').hide();
-                $('#duplicate-message').empty().hide();
+                $('#duplicate-message').empty();
+                $('#duplicate-warning').hide();
                 $('#Note2').hide();
 
                 $.ajax({
@@ -161,8 +369,8 @@
                         $('#json-output').text(JSON.stringify(data.json, null, 4));
                         $('#html-output').html(data.html).show();
                         $('#Note2').show();
-                        checkMissingFields(data.json); // Check and display missing fields
-                        window.scrollTo(0, document.body.scrollHeight);
+                        checkMissingFields(data.json);
+                        window.scrollTo({ top: document.body.scrollHeight, behavior: 'smooth' });
                     },
                     error: function() {
                         $('#loading-animation').hide();
@@ -205,7 +413,7 @@
                         });
 
                         if (type === 'date') {
-                            inputField.attr('max', new Date().toISOString().split('T')[0]);  // Set the max attribute to today's date
+                            inputField.attr('max', new Date().toISOString().split('T')[0]);
                         }
                         $('#missing-fields').append(
                             $('<div/>').append($('<label/>', {text: description + ' *', class: 'field-label'}))
@@ -303,7 +511,7 @@
                                 var duplicateUrl = SITE_URL + "/?query=" + data['hits'][0]['Module Number'] + "%20" + data['hits'][0]['Date'];
                                 $('#duplicate-warning').show();
                                 $('#send-button').val('Send Anyway').show();
-                                $('#duplicate-message').html(`Looks like this stat already exists in my database. Please check <a href="${duplicateUrl}" target="_blank">this link</a> to confirm. If you believe this is a mistake, you can submit these stats regardless.`).show();
+                                $('#duplicate-message').html(`Looks like this stat already exists in my database. Please check <a href="${duplicateUrl}" target="_blank">this link</a> to confirm. If you believe this is a mistake, you can submit these stats regardless.`);
                             } else {
                                 sendStats();
                             }
@@ -361,35 +569,35 @@
 </head>
 <body>
 <div class="container">
-    <h1 style="color: #222;">Upload Statistics</h1>
+    <h1>Upload Statistics</h1>
     <div class="upload-area">
-        <div class="upload-instructions">Drag an image here or <label for="file-input" style="color: #4285f4; cursor: pointer;">upload a file</label></div>
-        <input type="file" id="file-input" class="upload-input">
+        <span class="upload-icon">&#128228;</span>
+        <div class="upload-instructions">Drag an image here or <label for="file-input">browse files</label></div>
+        <input type="file" id="file-input" class="upload-input" accept="image/*">
     </div>
-    <div class="upload-or">OR</div>
-    <input type="text" class="search-bar" placeholder="Paste image from clipboard or link">
+    <div class="divider"><span>OR</span></div>
+    <input type="text" class="search-bar" placeholder="Paste image from clipboard">
     <button class="upload-button" id="upload-button">Generate Statistics</button>
-    <div id="loading-animation"><br><br><br>Generating statistics...<br><i>takes 5-10 seconds</i></div>
-    <br>
-    <br>
-    <br>
-    <div id="Note"><b>Note: Texts on screenshot should have no rotation. Otherwise my image recogniser fails. <a href="examples/"><i>Example screenshots</i></a></b></div>
-    <img id="image-preview" style="display:none;"/>
-    <br>
-    <div id="Note2" style="display:none; margin-top: 1em"><i>The screenshots and analysed data will be manually assessed before being published. Any incorrect grade translations will be fixed in the manual process (E.g. missing 5.0X).</i></div>
-    <pre id="html-output" style="display:none;"></pre>
-    <pre id="json-output" style="display:none;"></pre>
-    <div style="position: fixed; bottom: 1em; right: 1em;">
-        <a href="https://aamin.dev" class="contact">Contact</a>
+    <div class="loading" id="loading-animation">
+        <div class="spinner"></div>
+        Generating statistics...<br><span style="color: #9ca3af; font-size: 12px;">takes 5-10 seconds</span>
     </div>
+    <div class="note" id="Note">Texts on screenshot should have no rotation. Otherwise the image recogniser may fail. <a href="examples/">See example screenshots</a></div>
+    <img id="image-preview" style="display:none;"/>
+    <div class="info-note" id="Note2" style="display:none;">The screenshots and analysed data will be manually assessed before being published. Any incorrect grade translations will be fixed in the manual process (e.g. missing 5.0X).</div>
+    <div id="html-output" style="display:none;"></div>
+    <pre id="json-output"></pre>
     <form onsubmit="send_data(); return false;">
         <div id="missing-fields" class="missing-fields" style="display:none;"></div>
         <div id="send-data-box" style="display:none;"></div>
-        <div id="duplicate-warning" style="display:none; color: red;">
+        <div class="duplicate-warning" id="duplicate-warning">
             <p id="duplicate-message"></p>
         </div>
         <input type="submit" class="send-button" id="send-button" value="Send" style="display:none;"/>
     </form>
+</div>
+<div style="position: fixed; bottom: 20px; right: 20px; z-index: 9999;">
+    <a href="https://aamin.dev" class="contact">Contact</a>
 </div>
 </body>
 </html>
